@@ -214,6 +214,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
   Parameters: $1 shows the formatted textsize in Byte/KB/MB, $2 is the raw
   number of the textsize in Byte
 * (bug 3276) Give image <gallery>s fluid width
+* Added uploads link to page subtitle in Special:Contributions
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
